RESOLVED FIXED285054
FrameState and its UI process-side wrapper should not require duplicate frame trees
https://bugs.webkit.org/show_bug.cgi?id=285054
Summary FrameState and its UI process-side wrapper should not require duplicate frame...
Charlie Wolfe
Reported 2024-12-20 18:56:42 PST
WebBackForwardListFrameItem is a UI process-side wrapper for FrameState, and both maintain child objects that are expected to match. So, when a child HistoryItem is created or destroyed in the web process, logic is needed to update both WebBackForwardListFrameItem and FrameState. To simplify this, we should clear FrameState::children when storing it in the UI process and only have WebBackForwardListFrameItem manage its children.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-20 18:56:53 PST
Charlie Wolfe
Comment 2 2024-12-20 18:58:25 PST
EWS
Comment 3 2024-12-23 02:07:17 PST
Committed 288245@main (0cbb972550c2): <https://commits.webkit.org/288245@main> Reviewed commits have been landed. Closing PR #38302 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.